test/implicitDup21_10.slq
def foo(x:ğ”¹){
	y:=dup(x);
	t:=X(dup(y));
	if t{
		r:=X(x);
	}else{
		r:=x;
	}
	forget(t); /// error
	return r;
}

